# rustboyadvance-ng

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: gba.rs  grpc_support.rs  lib.rs
core/src/grpc_support/: grpc_thread.rs  rustnodegrpc.rs
grpc_support/: Cargo.toml
jsonrpcserver/: Cargo.toml  build.rs
jsonrpcserver/proto/: rustnodegrpc.proto
jsonrpcserver/src/: lib.rs
platform/rustboyadvance-sdl2-rpc/: Cargo.toml
platform/rustboyadvance-sdl2-rpc/src/: input.rs  main.rs  rpcserver.rs
