[package]
name = "grpc_support"
version = "0.1.0"
authors = ["Apex Mfer <apexmfer@gmail.com>"]
edition = "2021"

[dependencies] 
rustboyadvance-core = { path = "../core"}
log = "0.4" 
dotenv = "0.15"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0 ", features = ["derive"] }
tokio = { version = "1.9", features = ["sync", "rt-multi-thread", "macros"] }
tonic = "0.6"
prost = "0.9"


[build-dependencies]
tonic-build = "0.6"