[package]
name = "rustboyadvance_jsonrpcserver"
version = "0.1.0"
authors = ["Apex Mfer <apexmfer@gmail.com>"]
edition = "2021"

[dependencies]
jsonrpsee = { version= "0.15.1" , features = ["full"] }
anyhow = "1"
futures = "0.3"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }

 log = "0.4.8"
flexi_logger = { version = "0.14", features = ["colors"] }