[package]
name = "rustboyadvance-sdl2-rpc"
version = "0.1.0"
authors = ["Michel Heily <michelheily@gmail.com>"]
edition = "2018"

[dependencies]
rustboyadvance-core = { path = "../../core/", features = ["elf_support"] }
rustboyadvance-utils = { path = "../../utils/" }
sdl2 = { version = "0.33.0", features = ["image"] }
ringbuf = "0.2.2"
bytesize = "1.0.0"
structopt = "0.3"
log = "0.4.8"
flexi_logger = { version = "0.14", features = ["colors"] }
bit = "^0.1"
spin_sleep = "0.3.7" 
 
jsonrpsee = { version= "0.15.1" , features = ["full"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.3.4", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
anyhow = "1"
futures = "0.3"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
env_logger = "0.9.1"

# [features]
# default = ["gdb"]
# debugger = ["rustboyadvance-core/debugger"]
# gdb = ["rustboyadvance-core/gdb"]