[package]
name = "rustboyadvance-sdl2-rpc"
version = "0.1.0"
authors = ["Michel Heily <michelheily@gmail.com>"]
edition = "2018"

[dependencies]
rustboyadvance-core = { path = "../../core/", features = ["elf_support"] }
rustboyadvance-utils = { path = "../../utils/" }
rustboyadvance_jsonrpcserver = { path = "../../jsonrpcserver/" }
sdl2 = { version = "0.33.0", features = ["image"] }
ringbuf = "0.2.2"
bytesize = "1.0.0"
structopt = "0.3"
log = "0.4.8"
flexi_logger = { version = "0.14", features = ["colors"] }
bit = "^0.1"
spin_sleep = "0.3.7" 
  
futures = "0.3"
tonic = "0.8.2"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
env_logger = "0.9.1"

# [features]
# default = ["gdb"]
# debugger = ["rustboyadvance-core/debugger"]
# gdb = ["rustboyadvance-core/gdb"]